# knitout_to_dat_python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml  test-release.yml
docs/: changelog.rst  examples.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
src/knitout_to_dat_python/: __init__.py  cli.py
src/knitout_to_dat_python/dat_file_structure/: Dat_to_Knitout_Converter.py  dat_file.py  dat_file_color_codes.py  knitout_to_dat_converter.py
src/knitout_to_dat_python/dat_file_structure/Dat_Codes/: dat_file_color_codes.py  operation_colors.py  option_lines.py  option_value_colors.py
src/knitout_to_dat_python/dat_file_structure/dat_codes/: operation_colors.py  option_value_colors.py
src/knitout_to_dat_python/dat_file_structure/dat_sequences/: end_sequence.py  load_knit_script_sequence.py  startup_sequence.py
src/knitout_to_dat_python/dat_file_structure/dat_sequences/resources/: dat_finish.ks  dat_start_up.ks
src/knitout_to_dat_python/dat_file_structure/raster_processes/: Outhook_Raster.py  Pixel_Carriage_Pass_Converter.py  Raster_Carriage_Pass.py  Raster_Soft_Miss_Pass.py  Releasehook_Raster.py
src/knitout_to_dat_python/dat_file_structure/raster_processes/raster_passes/: Outhook_Raster.py  Raster_Carriage_Pass.py  Raster_Soft_Miss_Pass.py  Releasehook_Raster.py
src/knitout_to_dat_python/kickback_injection/: carriage_pass_with_kick.py  fixed_knitout_execution.py  kickback_execution.py
tests/: test_Dat_to_Knitout_Converter.py  test_Knitout_to_Dat_Samples.py  test_cli.py  test_dat_file.py  test_example.py  test_jacquard_merge.py  test_kickback_execution.py  test_original_dat_samples.py
tests/resources/: all_needle.ks  all_needle_racked.ks  compile_knitout.py  diff_dat_files.py  jacquard_merge.k  jacquard_seed.k  knitout-to-dat.js  knitout_diff.py  load_ks_resources.py  load_test_resources.py  plate_row.ks  run_js_dat_compilers_unix.py  run_js_dat_compilers_windows.py  seed.ks  seed_jacquard.k  splits.ks  stst.ks  tube.ks
